# poly-control

./: package.yaml  poly-control.cabal  poly-control.tcabal  stack.yaml
src/Control/: Poly.hs
src/Control/Applicative/: Poly.hs
src/Control/Monad/: Poly.hs  Shuffle.hs
