name:                poly-control
version:             1.0.0
synopsis:            This package provides abstraction for polymorphic controls, like PolyMonads or PolyApplicatives.
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Wojciech Danilo
maintainer:          Wojciech Danilo <wojciech.danilo@gmail.com>
stability:           experimental
homepage:            https://github.com/wdanilo/poly-control
bug-reports:         https://github.com/wdanilo/poly-control/issues
copyright:           Copyright (C) 2015 Wojciech Danilo
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


Library
  hs-source-dirs:     src
  ghc-options:        -Wall -O2
  default-language:   Haskell2010

  default-extensions: ConstraintKinds
                      DataKinds
                      DefaultSignatures
                      DeriveDataTypeable
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveTraversable
                      DoAndIfThenElse
                      EmptyDataDecls
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      LambdaCase
                      MultiParamTypeClasses
                      OverloadedStrings
                      StandaloneDeriving
                      TemplateHaskell
                      TupleSections
                      TypeOperators
                      ViewPatterns
                      TypeFamilies
  
  exposed-modules:    Control.Poly
                    , Control.Monad.Poly
                    , Control.Monad.Shuffle
                    , Control.Applicative.Poly

  build-depends:      base >=4.6 && <4.9
                    , lens
